netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: nais-system
          podSelector:
            matchLabels:
              app: nais-ingress
